--- a/package.json
+++ b/package.json
@@ -14,11 +14,8 @@
     "lucide-react": "^0.562.0",
     "monaco-editor": "^0.55.1",
     "next": "16.1.0",
-    "node-pty": "^1.0.0",
     "react": "19.2.3",
-    "react-dom": "19.2.3",
-    "ssh2": "^1.17.0",
-    "ssh2-sftp-client": "^9.1.0"
+    "react-dom": "19.2.3"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
